--- a/front/public/index.html
+++ b/front/public/index.html
@@ -9,7 +9,7 @@
 				}
 			});
 		</script>
-		<script type="text/javascript"
+		<script type="text/javascript" async
 						src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 		</script>
     <meta charset="utf-8" />
