--- a/front/public/index.html
+++ b/front/public/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+		<script type="text/javascript" async 
+						src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
+		</script>
 		<script type="text/x-mathjax-config">
 			MathJax.Hub.Config({
 				tex2jax: {
@@ -8,9 +11,12 @@
 					processEscapes: true
 				}
 			});
-		</script>
-		<script type="text/javascript" async
-						src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+
+			MathJax.Hub.Register.StartupHook("End", () => {
+				console.log("Mathjax loaded");
+				
+				MathJax.Hub.Queue(["Typeset", MathJax.Hub]);
+			})
 		</script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
